# re2o

./: .codeclimate.yml  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  CHANGELOG.md  Dockerfile  Pipfile  README.md  apt_requirements.txt  apt_requirements_radius.txt  contributors.py  dev-requirements.txt  docker-compose.yml  entrypoint.sh  install_re2o.sh  ldap-requirements.txt  manage.py  mysql-requirements.txt  package.json  pip_dev_requirements.txt  pip_requirements.txt  pip_requirements_radius.txt  postgresql-requirements.txt  pyproject.toml  requirements.txt  test.py  update_ldap.py  vue.config.js
api/: acl.py  apps.py  authentication.py  initial_perm.py  pagination.py  permissions.py  routers.py  serializers.py  settings.py  tests.py  urls.py  utils.py  views.py
cotisations/: __init__.py  acl.py  admin.py  apps.py  forms.py  models.py  payment.py  pdf.py  test_models.py  test_views.py  tests.py  tex.py  urls.py  utils.py  validators.py  views.py  views_autocomplete.py
deposits/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
doc/: Makefile  make.bat
docker/: docker-entrypoint.sh  settings_local.template.py
docs_utils/: re2o-archi.dia
footprint/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
freeradius_utils/: auth.py  authenticate_filaire.py  authenticate_user.py
install_utils/: db.ldiff  schema.ldiff
ldap_sync/: admin.py  apps.py  models.py  urls.py
logs/: __init__.py  acl.py  admin.py  apps.py  charts.py  forms.py  models.py  tests.py  urls.py  views.py
machines/: __init__.py  acl.py  admin.py  apps.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py  views_autocomplete.py
multi_op/: apps.py  forms.py  models.py  urls.py  views.py
portail/: apps.py  forms.py  tests.py  urls.py  views.py
preferences/: __init__.py  acl.py  admin.py  aes_field.py  apps.py  forms.py  models.py  tests.py  urls.py  (+1 more)
(+1194 files in other folders)
