[tool.poetry]
name = "re2o"
version = "2.9.0"
description = "Re2o is a management software initially developed at Rézo Metz. It is now in use in several student organizations. It aims to remain agnostic of the organization that uses it and be easy to setup."
authors = [
    "Gabriel Detraz",
    "Hugo Levy-falk",
    "Maël Kervella",
    "Jean-romain Garnier",
    "Arthur Grisel-davy",
    "Laouen Fernet",
    "Augustin Lemesle",
    "Lara Kermarec",
    "Alexandre Iooss",
    "Yoann Piétri",
    "Charlie Jacomme",
    "Corentin Canebier",
    "Bombar Maxime",
    "Guillaume Goessel",
    "Matthieu Michelet",
    "Edpibu",
    "Fardale",
    "Jean-marie Mineau",
    "David Sinquin",
    "Gabriel Le Bouder",
    "Simon Brélivet",
    "Benjamin Graillot",
    "Leïla Bekaddour",
    "Éloi Alain",
    "Pierre Cadart",
    "Antoine Vintache",
    "Thibault De Boutray",
    "Delphine Salvy",
    "Joanne Steiner",
    "Krokmou",
    "B",
    "Daniel Stan",
    "Gwenael Le Hir",
    "Hugo Hervieux",
    "Mikachu",
    "Nymous",
    "Pierre-antoine Comby",
    "Vincent Le Gallic",
]

[tool.poetry.dependencies]
python = ">=3.6,<4.0"
Django = "2.2.18"
django-autocomplete-light = "^3.8.1"
django-bootstrap3 = "^14.2.0"
django-rest-framework = "^0.1.0"
django-reversion = "^3.0.9"
Pillow = "^8.1.0"
python-dateutil = "^2.8.1"
django-macaddress = "^1.7.0"
pycrypto = "^2.6.1"
GitPython = "^3.1.13"
mysqlclient = {version = "^2.0.3", optional=true}
psycopg2 = {version = "^2.8.6", optional=true}
django-ldapdb = {version = "^1.5.1", optional=true}

[tool.poetry.extras]
mysql = ["mysqlclient"]
postgresql = ["psycopg2"]
ldap = ["django-ldapdb"]

[tool.poetry.dev-dependencies]
Sphinx = "^3.4.3"
sphinx-rtd-theme = "^0.5.1"
black = "^20.8b1"
rope = "^0.18.0"
coverage = "^5.4"
docstr-coverage = "^2.0.0"
